# obsidiann-flowers-webapp-shop

./: .gitignore  DEPLOYMENT_COMMANDS.md  README.md  docker-compose.dev-simple.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/src/: asgi.py  celery_app.py  urls.py  wsgi.py
backend/src/apps/analytics/: __init__.py  apps.py  urls.py
backend/src/apps/analytics/admin/: __init__.py
backend/src/apps/analytics/migrations/: 0001_initial.py  0002_customerstats.py
backend/src/apps/analytics/models/: __init__.py  customer_stats.py  event.py
backend/src/apps/analytics/serializers/: __init__.py
backend/src/apps/analytics/tasks/: __init__.py  aggregate.py
backend/src/apps/analytics/views/: __init__.py
backend/src/apps/bot/: urls.py  views.py
backend/src/apps/bot/admin/: __init__.py
backend/src/apps/bot/handlers/: __init__.py  broadcast.py  start.py
backend/src/apps/bot/migrations/: 0001_initial.py  0002_botadmin.py  0003_alter_botadmin_telegram_id_alter_botadmin_username.py  0004_conversationstate.py  0005_broadcast_segment.py  0006_change_segment_to_recipients_usernames.py  0007_add_audience_type.py  0008_alter_broadcast_recipients_usernames.py
backend/src/apps/bot/models/: __init__.py  admin.py  broadcast.py  conversation.py
backend/src/apps/bot/services/: __init__.py  broadcaster.py  notifications.py
backend/src/apps/bot/tasks/: __init__.py  broadcast.py  notifications.py
backend/src/apps/bot/tests/: test_admin_notifications.py
backend/src/apps/core/: authentication.py  urls.py
backend/src/apps/core/admin/: __init__.py
backend/src/apps/core/dao/: base.py
backend/src/apps/core/dto/: base.py
backend/src/apps/core/middleware/: __init__.py  telegram_only.py
backend/src/apps/core/migrations/: 0001_add_page_content.py
backend/src/apps/core/models/: __init__.py  base.py  page.py
backend/src/apps/core/serializers/: __init__.py
backend/src/apps/core/services/: base.py
backend/src/apps/core/views/: __init__.py
backend/src/apps/orders/: apps.py  signals.py
backend/src/apps/orders/admin/: __init__.py
backend/src/apps/orders/dto/: order.py
backend/src/apps/orders/migrations/: 0003_add_order_uid.py
backend/src/apps/orders/models/: __init__.py  order.py
backend/src/apps/orders/serializers/: order.py
backend/src/apps/orders/views/: order.py
backend/src/apps/products/: apps.py  urls.py
backend/src/apps/products/admin/: __init__.py
backend/src/apps/users/: urls.py
backend/src/settings/: __init__.py  apps.py  auth.py  caches.py  celery.py  cors.py  databases.py  environment.py  logging.py  rest_framework.py  storage.py  telegram.py  tinymce.py  unfold.py
(+56 files in other folders)
