[project]
name = "flower-shop-backend"
version = "1.0.0"
description = "Flower Shop Telegram Web App Backend"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.12",
]

[tool.uv]
default-groups = ["main"]

[dependency-groups]
main = [
    # Django core
    "django==5.2.10",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-environ==0.12.0",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",

    # Admin
    "django-unfold==0.75.0",
    "django-tinymce==4.1.0",

    # API docs
    "drf-spectacular==0.29.0",

    # Database
    "psycopg[binary]==3.3.2",

    # Cache & Task Queue
    "redis==7.1.0",
    "celery==5.5.0",
    "django-celery-results==2.6.0",
    "django-celery-beat==2.8.1",

    # Telegram
    "python-telegram-bot==22.5",

    # Server
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.34.0",

    # Storage
    "django-storages==1.14.6",
    "boto3==1.36.0",
    "pillow==11.1.0",

    # Monitoring
    "sentry-sdk[django,celery]==2.20.0",
    "django-health-check==3.20.0",

    # Utils
    "requests==2.32.3",
    "orjson==3.10.15",
    "python-json-logger==3.2.1",
]

test = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "pytest-asyncio==0.25.2",
    "factory-boy==3.3.3",
    "faker==33.3.1",
]

lint = [
    "ruff==0.9.2",
    "mypy==1.14.1",
    "django-stubs>=5.2.1",
    "djangorestframework-stubs==3.16.1",
]

dev = [
    { include-group = "main" },
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long
    "B008",   # function calls in argument defaults
]
exclude = ["*/migrations/*"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations", "tests"]

[tool.django-stubs]
django_settings_module = "settings"

[tool.pytest.ini_options]
pythonpath = ["src", "src/apps"]
testpaths = ["src"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "settings"
addopts = "-v --tb=short"
